5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3999/executions/1573_1332.log
== TEST (2019-03-11 15:35:22) 
-- CODE:
aresta = 5
area = 3/2*(3*25)**0.5
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:35:25) 
-- CODE:
aresta = 5
area = 3/2*(3*25)**0.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.164355
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:35:40) 
-- CODE:
aresta = 5
area = 3/2*(3*5)**0.5
 
print(round(area, 4))
-- OUTPUT:
5.8095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:35:43) 
-- CODE:
aresta = 5
area = 3/2*(3*5)**0.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.184817
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
5.8095
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:37:03) 
-- CODE:
aresta = 5
area = 3/2*(3)**0.5*5
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:37:05) 
-- CODE:
aresta = 5
area = 3/2*(3)**0.5*5
 
print(round(area, 4))
-- EXECUTION TIME:
0.126245
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:37:43) 
-- CODE:
aresta = 5
area = 3/2*(3)**0.5*5
 round(area,4)
print(round(area, 4))
-- ERROR:
File "XXXX", line 3
    round(area,4)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:38:30) 
-- CODE:
aresta = 5
area = 3/2*((3)**0.5)*5
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:38:33) 
-- CODE:
aresta = 5
area = 3/2*((3)**0.5)*5
 
print(round(area, 4))
-- EXECUTION TIME:
0.174812
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:40:27) 
-- CODE:
aresta= 5
area = 3/2*(3**0.5)*5**2
 
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:40:31) 
-- CODE:
aresta= 5
area = 3/2*(3**0.5)*5**2
 
print(round(area, 4))
-- EXECUTION TIME:
0.178381
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
